# jalice

./: .clang-format  CMakeLists.txt  README.md  startup.aiml
clients/console/: main.cpp
clients/xmpp/: main.cpp
src/: AimlWriter.cpp  AimlWriter.h  Database.cpp  Database.h  Element.cpp  Element.h  Handler.cpp  Handler.h  Kernel.cpp  Kernel.h  Match.cpp  Match.h  Memory.cpp  Memory.h  Nodemapper.h  Nodemaster.cpp  Nodemaster.h  Parser.cpp  Parser.h  Pointer.h  PreParser.cpp  PreParser.h  Responder.h  StringTokenizer.cpp  StringTokenizer.h  Substituter.cpp  Substituter.h  Template.cpp  Template.h  Utils.cpp  Utils.h  std-startup.aiml
src/aiml/: 1.aiml  2.aiml  3.aiml  4.aiml  5.aiml  6.aiml  8.aiml  9.aiml  A.aiml  B.aiml  C.aiml  D.aiml  E.aiml  F.aiml  G.aiml  H.aiml  I.aiml  J.aiml  K.aiml  L.aiml  M.aiml  N.aiml  O.aiml  P.aiml  Q.aiml  R.aiml  S.aiml  T.aiml  U.aiml  V.aiml  W.aiml  X.aiml  Y.aiml  Z.aiml  under.aiml
src/processor/: AimlProcessor.h  BotProcessor.h  BrProcessor.h  ConditionProcessor.h  FormalProcessor.h  GetProcessor.h  IdProcessor.h  InputProcessor.h  LearnProcessor.h  LowercaseProcessor.h  NameProcessor.h  NormalizeProcessor.h  PersonProcessor.h  RandomProcessor.h  SecureProcessor.h  SentenceProcessor.h  SetProcessor.h  SrProcessor.h  SraiProcessor.h  StarProcessor.h  TemplateProcessor.cpp  TemplateProcessor.h  ThatProcessor.h  ThatstarProcessor.h  ThinkProcessor.h  TopicstarProcessor.h  UppercaseProcessor.h
utility/: format.sh  formatter.cpp
